--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta content="https://auxy.gay/assets/images/angelo-cristma.png" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
-    <script src="assets/js/titlechange.js"></script>
-    <link href="assets/css/main.css" rel="stylesheet">
-    <link href="assets/css/particles.css" media="screen" rel="stylesheet">
+    <script src="assests/js/titlechange.js"></script>
+    <link href="assests/css/main.css" rel="stylesheet">
+    <link href="assests/css/particles.css" media="screen" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="assets/images/angelo-cristma.png">
+    <link rel="icon" type="image/x-icon" href="assests/images/angelo-cristma.png">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
 <body>
 
 <video autoplay id="video-background" loop muted="muted">
-    <source src="assets/vids/Untitled.mp4" type="video/mp4">
+    <source src="assests/vids/Untitled.mp4" type="video/mp4">
     Your browser does not support HTML5 video. Loser.
 </video>
 <div id="particles-js"></div>
@@ -47,10 +47,10 @@
     }
 </script>
 <div class="center">
-    <h1>sub zero menu</h1>
-    <p>One of the best gorilla tag mod menus    </p>
-    <p class="skush">free menu</p>
-    <p class="skush">10 dollar paid menu</p>
+    <h1>Subzero</h1>
+    <p></p>
+    <p class="skush"></p>
+    <p class="skush"></p>
     <div class="btn">
         <a href="https://discord.gg/VvfEwKdz"><p class="btns"><i class="fa-brands fa-discord"></i> Subzero discord</p></a>
         <a href="https://discord.gg/45J8pTDvDZ"><p class="btns"><i class="fa-brands fa-discord"></i> Irish duckys discord</p></a>
@@ -62,9 +62,9 @@
 </div>
 </body>
 
-<script src="assets/js/custom.js"></script>
-<script src="assets/js/particles.js"></script>
-<script src="assets/js/app.js"></script>
+<script src="assests/js/custom.js"></script>
+<script src="assests/js/particles.js"></script>
+<script src="assests/js/app.js"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/9105e9014d.js"></script>
 
 </html>
