--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
 <video autoplay id="video-background" loop muted="muted">
-    <source src="assets/vids/Untitled.mp4" type="video/mp4">
+    <source src="assests/vids/Untitled.mp4" type="video/mp4">
     Your browser does not support HTML5 video. Loser.
 </video>
 <div id="particles-js"></div>
