--- a/index.html
+++ b/index.html
@@ -1,47 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Husk</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Harmless Nuker</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #000;
+    overflow: hidden;
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+  }
+  #welcome-text {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  #welcome-text h1 {
+    font-size: 48px;
+    font-weight: 700;
+    margin: 0;
+    background: -webkit-linear-gradient(purple, pink, orange, yellow, lime, cyan, blue);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff00de, 0 0 40px #00fff4, 0 0 50px #ff00de, 0 0 60px #ff00de, 0 0 70px #00fff4, 0 0 80px #ff00de;
+}
 
-    <meta content="made by saze" property="og:title" />
-    <meta content="sub zero menu" property="og:description" />
-    <meta content="https://auxy.gay/" property="og:url" />
-    <meta content="https://auxy.gay/assets/images/angelo-cristma.png" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
-
-    <script src="assests/js/titlechange.js"></script>
-    <link href="assests/css/main.css" rel="stylesheet">
-    <link href="assests/css/particles.css" media="screen" rel="stylesheet">
-
-    <link rel="icon" type="image/x-icon" href="assests/images/angelo-cristma.png">
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap" rel="stylesheet">
-
+  #welcome-text p {
+    font-size: 16px;
+    margin: 10px 0;
+  }
+  #buttons-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .button {
+    padding: 10px 20px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    color: #000;
+    font-size: 14px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+    font-weight: 700;
+    margin: 10px;
+  }
+  .button:hover {
+    background-color: rgba(255, 255, 255, 0.7);
+  }
+  #discord-button {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+  #discord-button:hover {
+    background-color: #5f73bf;
+  }
+</style>
 </head>
 <body>
-
-</script>
-<div class="center">
-    <h1>Subzero</h1>
-    <p></p>
-    <p class="skush"></p>
-    <p class="skush"></p>
-    <div class="btn">
-        <a href="https://discord.gg/VvfEwKdz"><p class="btns"><i class="fa-brands fa-discord"></i> Subzero discord</p></a>
-        <a href="https://discord.gg/45J8pTDvDZ"><p class="btns"><i class="fa-brands fa-discord"></i> Irish duckys discord</p></a>
-        <a href="https://github.com/zaqry"><p class="btns"><i class="fa-brands fa-github"></i> Github</p></a>
-    </div>
+<div id="welcome-text">
+  <h1>Welcome to Harmless</h1>
+  <p>Harmless is the best discord nuker and raider</p>
 </div>
-<div class="outuby">
-    <p>made by saze&hearts;</a></p>
+<div id="buttons-container">
+  <a class="button" href="downloads.html">Download</a>
+  <a class="button" id="discord-button" href="https://discord.gg/eJgJBUrQyq">Join our Discord</a>
 </div>
 </body>
-
-<script src="assests/js/custom.js"></script>
-<script src="assests/js/particles.js"></script>
-<script src="assests/js/app.js"></script>
-<script crossorigin="anonymous" src="https://kit.fontawesome.com/9105e9014d.js"></script>
-
 </html>
