--- a/downloads.html
+++ b/downloads.html
@@ -28,8 +28,8 @@
     color: transparent;
     background: -webkit-linear-gradient(purple, pink, orange, yellow, lime, cyan, blue);
     -webkit-background-clip: text;
-    background-clip: text; /* Define the standard property */
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff00de, 0 0 40px #00fff4, 0 0 50px #ff00de, 0 0 60px #ff00de, 0 0 70px #00fff4, 0 0 80px #ff00de; /* Radiant effect */
+    background-clip: text;
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff00de, 0 0 40px #00fff4, 0 0 50px #ff00de, 0 0 60px #ff00de, 0 0 70px #00fff4, 0 0 80px #ff00de;
   }
   #downloads-list {
     margin-top: 20px;
@@ -37,10 +37,10 @@
   .download-link {
     display: block;
     font-size: 24px;
-    color: #fff; /* Set text color to white */
+    color: #fff;
     text-decoration: none;
     margin-bottom: 10px;
-    text-shadow: 0 0 5px rgba(255, 255, 255, 0.8); /* Adjusted text shadow */
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
   }
 </style>
 </head>
