--- a/bots.html
+++ b/bots.html
@@ -40,11 +40,24 @@
         </div>
     </div>
     <script>
-        // Simulate updating bot count (for demonstration purposes)
-        setInterval(function() {
-            var botCount = Math.floor(Math.random() * 1000); // Randomize bot count
-            document.getElementById("bot-count").textContent = botCount;
-        }, 5000); // Update every 5 seconds
+        // Function to fetch bot count from harmless.pro/bots
+        function fetchBotCount() {
+            fetch('http://harmless.pro/bots')
+            .then(response => response.text())
+            .then(data => {
+                var botCount = parseInt(data);
+                document.getElementById("bot-count").textContent = botCount;
+            })
+            .catch(error => {
+                console.error('Error fetching bot count:', error);
+            });
+        }
+
+        // Initial fetch
+        fetchBotCount();
+
+        // Periodically update bot count
+        setInterval(fetchBotCount, 5000); // Update every 5 seconds
     </script>
 </body>
 </html>
