--- a/index.html
+++ b/index.html
@@ -10,9 +10,29 @@
     margin: 0;
     padding: 0;
     background-color: #000;
-    overflow: hidden;
     font-family: 'Roboto', sans-serif;
     color: #fff;
+  }
+  header {
+    background-color: #000;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+  }
+  .logo {
+    width: 50px;
+    height: 50px;
+    background-image: url('your-logo-path.jpg');
+    background-size: cover;
+    margin-right: 15px;
+  }
+  .header-text {
+    font-size: 24px;
+    font-weight: bold;
+    background: -webkit-linear-gradient(purple, pink, orange, yellow, lime, cyan, blue);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
   #welcome-text {
     position: absolute;
@@ -30,8 +50,7 @@
     background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 0 0 20px #fff, 0 0 30px #ff00de, 0 0 40px #00fff4, 0 0 50px #ff00de, 0 0 60px #ff00de, 0 0 70px #00fff4, 0 0 80px #ff00de;
-}
-
+  }
   #welcome-text p {
     font-size: 16px;
     margin: 10px 0;
@@ -69,6 +88,10 @@
 </style>
 </head>
 <body>
+<header>
+  <div class="logo"></div>
+  <div class="header-text">Harmless <3</div>
+</header>
 <div id="welcome-text">
   <h1>Welcome to Harmless</h1>
   <p>Harmless is the best discord nuker and raider</p>
