--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   .logo {
     width: 50px;
     height: 50px;
-    background-image: url('your-logo-path.jpg');
+    background-image: url('harmless.png');
     background-size: cover;
     margin-right: 15px;
   }
