--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     padding: 10px 20px;
     display: flex;
     align-items: center;
+    border-bottom: 2px solid #ffffff50;
   }
   .logo {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     background-image: url('harmless.png');
     background-size: cover;
     margin-right: 15px;
@@ -31,8 +32,8 @@
     font-weight: bold;
     background: -webkit-linear-gradient(purple, pink, orange, yellow, lime, cyan, blue);
     -webkit-background-clip: text;
-    background-clip: text;
     -webkit-text-fill-color: transparent;
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff00de, 0 0 40px #00fff4, 0 0 50px #ff00de, 0 0 60px #ff00de, 0 0 70px #00fff4, 0 0 80px #ff00de;
   }
   #welcome-text {
     position: absolute;
@@ -44,10 +45,8 @@
   #welcome-text h1 {
     font-size: 48px;
     font-weight: 700;
-    margin: 0;
     background: -webkit-linear-gradient(purple, pink, orange, yellow, lime, cyan, blue);
     -webkit-background-clip: text;
-    background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 0 0 20px #fff, 0 0 30px #ff00de, 0 0 40px #00fff4, 0 0 50px #ff00de, 0 0 60px #ff00de, 0 0 70px #00fff4, 0 0 80px #ff00de;
   }
