--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     height: 50px;
     background-image: url('harmless.png');
     background-size: cover;
-    margin-right: 5px; 
+    margin-right: 5px;
   }
   .header-text {
     font-size: 24px;
@@ -35,9 +35,18 @@
     -webkit-text-fill-color: transparent;
     text-shadow: 0 0 20px #fff, 0 0 30px #ff00de, 0 0 40px #00fff4, 0 0 50px #ff00de, 0 0 60px #ff00de, 0 0 70px #00fff4, 0 0 80px #ff00de;
   }
+  .main-logo {
+    display: block;
+    width: 250px; 
+    height: 250px; 
+    margin: 140px auto 3px; 
+    background-image: url('harmless.png');
+    background-size: cover;
+    background-position: center;
+  }
   #welcome-text {
     position: absolute;
-    top: 40%;
+    top: 50%; 
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -56,7 +65,7 @@
   }
   #buttons-container {
     position: absolute;
-    top: 50%;
+    top: 60%; 
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
@@ -91,6 +100,7 @@
   <div class="logo"></div>
   <div class="header-text">Harmless <3</div>
 </header>
+<div class="main-logo"></div>
 <div id="welcome-text">
   <h1>Welcome to Harmless</h1>
   <p>Harmless is the best discord nuker and raider</p>
