--- a/index.html
+++ b/index.html
@@ -3,111 +3,77 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Harmless <3 </title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<title>Harmless.pro</title>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap">
 <style>
-  body {
-    margin: 0;
-    padding: 0;
-    background-color: #000;
-    font-family: 'Roboto', sans-serif;
-    color: #fff;
-  }
-  header {
-    background-color: #000;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    border-bottom: 2px solid #ffffff50;
-  }
-  .logo {
-    width: 50px;
-    height: 50px;
-    background-image: url('harmless.png');
-    background-size: cover;
-    margin-right: 5px;
-  }
-  .header-text {
-    font-size: 24px;
-    font-weight: bold;
-    background: -webkit-linear-gradient(purple, pink, orange, yellow, lime, cyan, blue);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff00de, 0 0 40px #00fff4, 0 0 50px #ff00de, 0 0 60px #ff00de, 0 0 70px #00fff4, 0 0 80px #ff00de;
-  }
-  .main-logo {
-    display: block;
-    width: 250px; 
-    height: 250px; 
-    margin: 140px auto 3px; 
-    background-image: url('harmless.png');
-    background-size: cover;
-    background-position: center;
-  }
-  #welcome-text {
-    position: absolute;
-    top: 50%; 
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-  #welcome-text h1 {
-    font-size: 48px;
-    font-weight: 700;
-    background: -webkit-linear-gradient(purple, pink, orange, yellow, lime, cyan, blue);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff00de, 0 0 40px #00fff4, 0 0 50px #ff00de, 0 0 60px #ff00de, 0 0 70px #00fff4, 0 0 80px #ff00de;
-  }
-  #welcome-text p {
-    font-size: 16px;
-    margin: 10px 0;
-  }
-  #buttons-container {
-    position: absolute;
-    top: 60%; 
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .button {
-    padding: 10px 20px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border: none;
-    color: #000;
-    font-size: 14px;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: all 0.3s ease-in-out;
-    font-weight: 700;
-    margin: 10px;
-  }
-  .button:hover {
-    background-color: rgba(255, 255, 255, 0.7);
-  }
-  #discord-button {
-    background-color: rgba(255, 255, 255, 0.5);
-  }
-  #discord-button:hover {
-    background-color: #5f73bf;
-  }
+    body {
+        background-color: black;
+        margin: 0;
+        padding: 0;
+        font-family: 'Roboto', sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        min-height: 100vh;
+        position: relative;
+    }
+
+    .logo {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        width: 100px;
+        height: auto;
+    }
+
+    .title {
+        font-size: 3em;
+        font-weight: bold;
+        color: purple;
+        padding: 10px 20px;
+        border-radius: 20px;
+        margin-bottom: 20px;
+        text-shadow: 0 0 20px rgba(128,0,128,1),
+                     0 0 30px rgba(128,0,128,1),
+                     0 0 40px rgba(128,0,128,1),
+                     0 0 50px rgba(128,0,128,1),
+                     0 0 60px rgba(128,0,128,1),
+                     0 0 70px rgba(128,0,128,1),
+                     0 0 80px rgba(128,0,128,1);
+    }
+
+    .subtitle {
+        font-size: 1.5em;
+        color: rgba(128,0,128,0.6);
+        text-shadow: 0 0 10px rgba(128,0,128,0.8);
+        margin-bottom: 20px;
+    }
+
+    .button {
+        font-size: 1.2em;
+        font-weight: bold;
+        color: purple;
+        background-color: transparent;
+        border: 2px solid purple;
+        padding: 10px 20px;
+        border-radius: 30px;
+        text-decoration: none;
+        text-align: center;
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .button:hover {
+        background-color: purple;
+        color: white;
+    }
 </style>
 </head>
 <body>
-<header>
-  <div class="logo"></div>
-  <div class="header-text">Harmless <3</div>
-</header>
-<div class="main-logo"></div>
-<div id="welcome-text">
-  <h1>Welcome to Harmless</h1>
-  <p>Harmless is the best discord nuker and raider</p>
-</div>
-<div id="buttons-container">
-  <a class="button" href="downloads.html">Download</a>
-  <a class="button" id="discord-button" href="https://discord.gg/eJgJBUrQyq">Join our Discord</a>
-</div>
+    <img src="Assets/logo.png" alt="Logo" class="logo">
+    <div class="title">Harmless.pro</div>
+    <div class="subtitle">Above all.</div>
+    <a href="https://discord.gg/MjknNPWSQU" class="button">Join our Discord</a>
 </body>
 </html>
